doc: discipline.crud
